--- a/WYY/src/assets/css/cost.less
+++ b/WYY/src/assets/css/cost.less
@@ -127,6 +127,12 @@
   .hid;
 }
 
+.block{
+  display: block;
+  .por;
+  .hid;
+}
+
 /* ***********************分割线************************************************** */
 
 // //->LESS代码
