--- a/WYY/src/assets/css/base.css
+++ b/WYY/src/assets/css/base.css
@@ -115,6 +115,7 @@ body {
   height: 100%;
   line-height: 1;
   background: #f5f5f5;
+  font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
 }
 a {
   text-decoration: none;
