--- a/WYY/src/assets/css/base.less
+++ b/WYY/src/assets/css/base.less
@@ -39,6 +39,7 @@ body {
 	height: 100%;
 	line-height: 1;
     background: #f5f5f5;
+    font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
 }
 a{
 	text-decoration: none;
