--- a/WYY/src/assets/css/cost.css
+++ b/WYY/src/assets/css/cost.css
@@ -1,3 +1,6 @@
+body {
+  font: 14px/1.5 "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
+}
 .w-inner {
   width: 1226px;
   margin: 0 auto;
