--- a/WYY/src/assets/css/cost.less
+++ b/WYY/src/assets/css/cost.less
@@ -1,3 +1,11 @@
+body{
+  //小米官网
+  font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+  //魅族官网
+  //font:14px/1.5 "Helvetica",Tahoma,Arial,"Hiragino Sans GB","Microsoft YaHei",SimSun,Heiti,sans-serif;
+  // 华为商城font
+  //font:12px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+}
 @full: 100%;
 @width: 1226px;
 @auto: auto;
