--- a/WYY/src/assets/css/cost.css
+++ b/WYY/src/assets/css/cost.css
@@ -70,6 +70,15 @@ body {
   position: relative;
   overflow: hidden;
 }
+.linear_bg {
+  background-image: linear-gradient(to top, #000000 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: -moz-linear-gradient(bottom, #000000 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0%, #000000), color-stop(100%, rgba(255, 255, 255, 0)));
+  background-image: -webkit-linear-gradient(bottom, #000000 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: -o-linear-gradient(bottom, #000000 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: -ms-linear-gradient(bottom, #000000 0%, rgba(255, 255, 255, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='rgba(255,255,255,0)', GradientType=0);
+}
 /* ***********************分割线************************************************** */
 .lesspublic,
 .lessnav ul {
