--- a/WYY/src/assets/css/cost.less
+++ b/WYY/src/assets/css/cost.less
@@ -141,6 +141,18 @@ body{
   .hid;
 }
 
+
+.linear_bg{
+  //background-image: linear-gradient(0deg, #000000 0%, transparent 100%);
+    background-image: linear-gradient(to top, #000000 0%, rgba(255,255,255,0) 100%);
+    background-image: -moz-linear-gradient(bottom, #000000 0%, rgba(255,255,255,0) 100%);
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0%, #000000), color-stop(100%, rgba(255,255,255,0)));
+    background-image: -webkit-linear-gradient(bottom, #000000 0%, rgba(255,255,255,0) 100%);
+    background-image: -o-linear-gradient(bottom, #000000 0%, rgba(255,255,255,0) 100%);
+    background-image: -ms-linear-gradient(bottom, #000000 0%, rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='rgba(255,255,255,0)', GradientType=0);
+}
+
 /* ***********************分割线************************************************** */
 
 // //->LESS代码
